// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`communication/send-sms/messente RetrieveMessageStatus should perform successfully 1`] = `
Ok {
  "value": Object {
    "deliveryStatus": "delivered",
  },
}
`;

exports[`communication/send-sms/messente SendMessage should perform successfully 1`] = `
Ok {
  "value": Object {
    "messageId": "ea957d09-7221-4377-a2b6-fc8751426c6d",
  },
}
`;
